ProdIND/ProdPrograms/force-app/main/default/objects/CFD_State_Master__c/CFD_State_Master__c.object-meta.xml
<CustomObject>
    <label>CFD State Master</label>
    <nameField>
        <label>CFD State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFD State Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>