ProdIND/ProdPrograms/force-app/main/default/objects/CFD_State_Master__c/fields/CFD_State_Code__c.field-meta.xml
<CustomField>
    <fullName>CFD_State_Code__c</fullName>
    <externalId>true</externalId>
    <label>CFD_State_Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>