ProdIND/ProdPrograms/force-app/main/default/objects/CFD_State_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CFD_State_Code__c</columns>
    <columns>NAME</columns>
    <columns>District__c</columns>
    <columns>Address_1__c</columns>
    <columns>Address_2__c</columns>
    <columns>Address_3__c</columns>
    <columns>Address_4__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>